sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:17: error: illegal start of simple expression
	if (tri == l)} {return}
                     ^AlgBubbleSort3:17: error: ';' expected but '{' found.
	if (tri == l)} {return}
                       ^