sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {

var l = getNombreValeurs()
var flag = true


while (flag)
{	flag = false
	var tri = 
	for (i <- 0 to l-2)
	{if (plusPetit (i+1, i))
	{echange (i,i+1);
	flag = true;}
	else {tri = tri +1}
	}
	if (tri == l)} {return}
}


